# ih-muse-k8s

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
ih_muse_k8s/: __init__.py  cli.py  collector.py  config.py
tests/: README.md  test_foo.py
tests/integration/: conftest.py  test_collection.py  test_helpers.py
tests/integration/resources/: deployment.yml
