[project]
name = "ih-muse-k8s"
version = "0.0.1"
description = "Muse for Kubernetes"
authors = [{ name = "Luis Diaz", email = "code.luis.diaz@proton.me" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11.6,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "ih-muse>=0.0.20"
]

[project.urls]
Homepage = "https://infinitehaiku.github.io/ih-muse-k8s/"
Repository = "https://github.com/infinitehaiku/ih-muse-k8s"
Documentation = "https://infinitehaiku.github.io/ih-muse-k8s/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "piceli>=0.0.4",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.20.0",
    "mypy>=1.13.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.9",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-inline-tabs>=2023.4.21",
    "myst-parser>=2",
    "furo>=2023",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ih_muse_k8s"]

[tool.mypy]
files = ["ih_muse_k8s"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["ih_muse_k8s"]
